add recursion to serialize deep object