@@ -1,5 +1,6 @@
 package ru.clevertec.testclasses;
 
+import java.math.BigDecimal;
 import java.util.*;
 
 public class SomeTypes {
@@ -19,17 +20,27 @@ public class SomeTypes {
 //    public Integer[] integerArray = {1, null, 3};
 //    public int[] intArray = {1, 2, 3};
 //    public String[] strArray = {null, "two", "three"};
-//    public List<Integer> list = new ArrayList<>(Arrays.asList(null, 2, 3));
+//    public Boolean[] booleanArray = {true, false, null};
+
+//    public List<Integer> list = new ArrayList<>(Arrays.asList(1, 2, 3));
 //    public List<String> list1 = new ArrayList<>(Arrays.asList("one", null, "three"));
-//    public List<Boolean> list3 = new ArrayList<>(Arrays.asList(true, false, null));
+//    public List<Boolean> list3 = List.of(true, false);
 //public List<int[]> list = new ArrayList<>(Arrays.asList(intArray, intArray, intArray));
+//    public List<List<Integer>> listOfLists = new ArrayList<>(Arrays.asList(list, list));
 
-        public Map<Integer, String> map = Map.of(1, "value1", 2, "value2");
-    public Map<String, Integer> map1 = Map.of("key1", 11, "key2", 22);
-    public Map<Integer, Integer> map2 = Map.of(1, 10, 2, 20);
+//        public Map<Integer, String> map = Map.of(1, "value1", 2, "value2");
+//    public Map<String, Integer> map1 = Map.of("key1", 11, "key2", 22);
+//    public Map<Integer, Integer> map2 = Map.of(1, 10, 2, 20);
+//    public Map<String, String> map3 = Map.of("key1", "11", "key2", "22");
 
-    PhysiologicalData physiologicalData =
-            new PhysiologicalData(18, 70.4, 175.2, Sex.MALE);
+//    PhysiologicalData physiologicalData =
+//            new PhysiologicalData(18, 70.4, 175.2, Sex.MALE);
 
+//    BigDecimal bigDecimal = new BigDecimal("45").add(new BigDecimal("6"));
+
+//    List<PhysiologicalData> list = new ArrayList<>(Arrays.asList(physiologicalData, physiologicalData));
+
+//    Set<Integer> set = new HashSet<>(Set.of(1, 2, 3));
 
 }
+
